--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-          cache-dependency-path: 'requirements-dev.txt'
+          cache-dependency-path: 'pdm.lock'
 
       - name: Install dependencies
         run: |
-          pip install -r requirements-dev.txt
+          pip install pdm
+          pdm install
 
       - name: Check formatting (black)
         run: black . --diff --color && black . --check
