--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -10,7 +10,7 @@ on:
     paths:
       - pushup_page/strava_sync.py
       - pushup_page/gen_svg.py
-      - requirements.txt
+      - pdm.lock
 
 env:
   RUN_TYPE: strava
@@ -43,19 +43,20 @@ jobs:
         with:
           python-version: '3.11'
           cache: pip
-          cache-dependency-path: 'requirements.txt'
+          cache-dependency-path: 'pdm.lock'
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install pdm
+          pdm install
 
       - name: Cache Data Files
         if: env.SAVE_DATA_IN_GITHUB_CACHE == 'true'
         uses: actions/cache@v4
         with:
-            path: |
-              assets
-              pushup_page/data.db
+          path: |
+            assets
+            pushup_page/data.db
           key: ${{ env.DATA_CACHE_PREFIX }}-${{ github.sha }}-${{ github.run_id }}
           restore-keys: |
             ${{ env.DATA_CACHE_PREFIX }}-${{ github.sha }}-
