--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Andy963", email = "Andy963@users.noreply.github.com"},
 ]
 dependencies = ["arrow>=1.3.0", "stravalib>=2.4", "sqlalchemy>=2.0.43", "dotenv>=0.9.9"]
-requires-python = "==3.10.*"
+requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "MIT"}
 
