Fix: Use correct secret names in Strava sync workflow

--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Run sync Strava script
         run: |
-          pdm run python -m pushup_page.strava_sync ${{ secrets.STRAVA_CLIENT_ID }} ${{ secrets.STRAVA_CLIENT_SECRET }} ${{ secrets.STRAVA_CLIENT_REFRESH_TOKEN }}
+          pdm run python -m pushup_page.strava_sync ${{ secrets.CLIENT_ID }} ${{ secrets.CLIENT_SECRET }} ${{ secrets.REFRESH_TOKEN }}
 
       - name: Make svg GitHub profile
         env:
