--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -25,6 +25,7 @@ jobs:
   sync:
     name: Sync
     runs-on: ubuntu-latest
+    environment: sync
     outputs:
       SAVE_DATA_IN_GITHUB_CACHE: ${{ steps.set_output.outputs.SAVE_DATA_IN_GITHUB_CACHE }}
       DATA_CACHE_PREFIX: ${{ steps.set_output.outputs.DATA_CACHE_PREFIX }}
@@ -62,6 +63,10 @@ jobs:
             ${{ env.DATA_CACHE_PREFIX }}-
 
       - name: Run sync Strava script
+        env:
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
         run: |
           pdm run python -m pushup_page.strava_sync ${{ secrets.CLIENT_ID }} ${{ secrets.CLIENT_SECRET }} ${{ secrets.REFRESH_TOKEN }}
       - name: Make svg GitHub profile
@@ -70,8 +75,7 @@ jobs:
           TITLE_GRID: ${{ env.TITLE_GRID }}
           ATHLETE: ${{ env.ATHLETE }}
         run: |
-          python pushup_page/gen_svg.py --from-db --title "$TITLE" --type github --github-style "align-firstday" --athlete "$ATHLETE" --output assets/pushup_github.svg --use-localtime
-          python pushup_page/gen_svg.py --from-db --title "$TITLE_GRID" --type grid --athlete "$ATHLETE" --output assets/pushup_grid.svg --use-localtime
+          pdm run python -m pushup_page.gen_svg --from-db --title "$TITLE" --type github --github-style "align-firstday" --athlete "$ATHLETE" --output assets/pushup_github.svg --use-localtime
 
       - name: Set Output
         id: set_output
