--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -83,8 +83,8 @@ jobs:
 
       - name: Commit and push SVG
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name ${{ env.ATHLETE }}
+          git config user.email ${{ env.ATHLETE }}@users.noreply.github.com
           git add assets/pushup_github.svg
           git commit -m "Update pushup_github.svg" || echo "No changes to commit"
           git push
