--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          persist-credentials: true
 
       - name: Set up Python
         id: setup_python
@@ -70,9 +70,6 @@ jobs:
         run: |
           pdm run python -m pushup_page.strava_sync ${{ secrets.CLIENT_ID }} ${{ secrets.CLIENT_SECRET }} ${{ secrets.REFRESH_TOKEN }}
 
-      - name: Gen CSV file
-        run: |
-          pdm run python -m pushup_page.data_to_csv
       - name: Make svg GitHub profile
         env:
           TITLE: ${{ env.TITLE }}
@@ -81,13 +78,16 @@ jobs:
         run: |
           pdm run python -m pushup_page.gen_svg --from-db --title "$TITLE" --type github --github-style "align-firstday" --athlete "$ATHLETE" --output assets/pushup_github.svg --use-localtime
 
-      - name: Commit and push SVG
+      - name: Commit and push Data & SVG
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name ${{ env.ATHLETE }}
           git config user.email ${{ env.ATHLETE }}@users.noreply.github.com
-          git add assets/pushup_github.svg
-          git commit -m "Update pushup_github.svg" || echo "No changes to commit"
-          git push
+          git add assets/pushup_github.svg pushup_page/data.db pushup_data.csv
+          git commit -m "Update pushup_github.svg, data.db, and pushup_data.csv" || echo "No changes to commit"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+          git push origin HEAD:master
 
       - name: Set Output
         id: set_output
