--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,9 @@ jobs:
           pdm install
 
       - name: Check formatting (black)
-        run: black . --diff --color && black . --check
+        run: pdm run black . --check --diff
 
       - name: Lint with Ruff
-        run: |
-          pip install ruff
-          ruff check .
+        run: pdm run ruff check .
 
 
