--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Andy963", email = "Andy963@users.noreply.github.com"},
 ]
-dependencies = ["arrow>=1.3.0", "stravalib>=2.4", "sqlalchemy>=2.0.43", "dotenv>=0.9.9", "svgwrite>=1.4.3", "colour>=0.1.5", "s2sphere>=0.2.5", "timezonefinder>=8.0.0", "gpxpy>=1.6.2", "polyline>=2.0.3", "black>=25.1.0"]
+dependencies = ["arrow>=1.3.0", "stravalib>=2.4", "sqlalchemy>=2.0.43", "dotenv>=0.9.9", "svgwrite>=1.4.3", "colour>=0.1.5", "s2sphere>=0.2.5", "timezonefinder>=8.0.0", "gpxpy>=1.6.2", "polyline>=2.0.3", "black>=25.1.0", "ruff>=0.8.4"]
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "MIT"}
