--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,15 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pdm
-          pdm install
+          pdm install -G dev
 
       - name: Check formatting (black)
         run: pdm run black . --check --diff
 
       - name: Lint with Ruff
         run: pdm run ruff check .
+
+      - name: Run tests (pytest)
+        run: pdm run pytest
 
 
